Trying to fix colour of buttons on mobile

--- a/css/addon.css
+++ b/css/addon.css
@@ -97,6 +97,24 @@
   background-color: rgb(31, 97, 141, .75) !important;
   border-color: rgb(31, 97, 141, .75)!important;
 }
+.btn-info.disabled,
+.btn-info[disabled],
+fieldset[disabled] .btn-info,
+.btn-info.disabled:hover,
+.btn-info[disabled]:hover,
+fieldset[disabled] .btn-info:hover,
+.btn-info.disabled:focus,
+.btn-info[disabled]:focus,
+fieldset[disabled] .btn-info:focus,
+.btn-info.disabled:active,
+.btn-info[disabled]:active,
+fieldset[disabled] .btn-info:active,
+.btn-info.disabled.active,
+.btn-info[disabled].active,
+fieldset[disabled] .btn-info.active {
+  background-color: rgb(31, 97, 141, .75) !important;
+  border-color: rgb(31, 97, 141, .75)!important;
+}
 .btn-info:not(:disabled):not(.disabled).active, .btn-info:not(:disabled):not(.disabled):active, .show>.btn-info.dropdown-toggle {
   background-color: #1f618d!important;
   border-color: #1f618d!important;
